apps/honcho/base/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: honcho
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: honcho
      app.kubernetes.io/name: honcho
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: honcho
        app.kubernetes.io/name: honcho
    spec:
      containers:
        - name: honcho
          image: honcho
          ports:
            - name: http
              containerPort: 8000
          startupProbe:
            failureThreshold: 180
            httpGet:
              path: /health
              port: http
            periodSeconds: 5
            timeoutSeconds: 5
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: http
            periodSeconds: 30
            timeoutSeconds: 5
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: http
            periodSeconds: 10
            timeoutSeconds: 5
