apps/honcho/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: honcho
  labels:
    app.kubernetes.io/instance: honcho
    app.kubernetes.io/name: honcho
spec:
  ports:
    - name: http
      port: 8000
      targetPort: http
  selector:
    app.kubernetes.io/instance: honcho
    app.kubernetes.io/name: honcho
